# XDE-Resources

./: CMakeLists.txt  README.md  setup.py
resources/: CMakeLists.txt
resources/urdf/: icub.xml  kuka.xml  rx90.xml  sphere.xml
resources/urdf/lwr/: base.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae
src/: CMakeLists.txt  core.py  core.py.cmake
src/resources/: CMakeLists.txt
src/resources/urdf/: ground_0.dae  ground_0.xml  iCubGenova03_compensatedViscousFriction.xml  iCubGenova03_identifiedViscousFriction.xml  iCubGenova03_noViscousFriction.xml  icub_simple_collision.dae  kuka.xml  kuka_simple.xml  romeo.xml  romeo_collision.xml  wall1.dae  wall1.xml
src/resources/urdf/lwr/: link6.dae
src/resources/urdf/romeo/collision/: HeadRoll.dae  LAnkleRoll.dae  LAnkleRollBasic.dae  LElbowYaw.dae  LHipPitch.dae  LKneePitch.dae  LShoulderYaw.dae  LToePitch.dae  LWristPitch.dae  NeckPitch.dae  Phalax.dae  PhalaxEnd.dae  RAnkleRoll.dae  RAnkleRollBasic.dae  RElbowYaw.dae  RHipPitch.dae  RKneePitch.dae  RShoulderYaw.dae  RToePitch.dae  RWristPitch.dae  Torso.dae  Waist.dae
test/: main.py
