# 2012 Sovan Hak

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)

SET(PROJECT_NAME xde_resources)
SET(PROJECT_DESCRIPTION "xde common resources")
SET(PROJECT_URL "Coming soon")

INCLUDE(FindPythonLibs)
IF (NOT ${PYTHONLIBS_FOUND} STREQUAL TRUE)
	MESSAGE(FATAL_ERROR "Python has not been found.")
ENDIF (NOT ${PYTHONLIBS_FOUND} STREQUAL TRUE)

INCLUDE(FindPythonInterp)
IF (NOT ${PYTHONINTERP_FOUND} STREQUAL TRUE)
	MESSAGE(FATAL_ERROR "Python executable has not been found.")
ENDIF (NOT ${PYTHONINTERP_FOUND} STREQUAL TRUE)

# Find PYTHON_LIBRARY_DIRS
GET_FILENAME_COMPONENT(PYTHON_LIBRARY_DIRS ${PYTHON_LIBRARIES} PATH)

EXECUTE_PROCESS(
  COMMAND "${PYTHON_EXECUTABLE}" "-c"
  "import sys, os; print os.sep.join(['lib', 'python' + sys.version[:3], 'dist-packages'])"
  OUTPUT_VARIABLE PYTHON_SITELIB
  OUTPUT_STRIP_TRAILING_WHITESPACE
  ERROR_QUIET)

SET(XDE_RESOURCES_PATH ${CMAKE_INSTALL_PREFIX}/share/xde-resources/urdf)

ADD_SUBDIRECTORY(src)
