SET(PYTHON_INSTALL_DIR ${PYTHON_SITELIB}/${PROJECT_NAME})

CONFIGURE_FILE(core.py.cmake ${PYTHON_INSTALL_DIR}/core.py)
CONFIGURE_FILE(__init__.py ${PYTHON_INSTALL_DIR}/__init__.py COPYONLY)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PYTHON_SITELIB}/${PROJECT_NAME}/core.py
			  ${CMAKE_CURRENT_BINARY_DIR}/${PYTHON_SITELIB}/${PROJECT_NAME}/__init__.py
		DESTINATION ${CMAKE_INSTALL_PREFIX}/${PYTHON_INSTALL_DIR}
		PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
