
SET(RESOURCES_URDF
	urdf/env11.xml
	urdf/env11.dae

	urdf/env12.xml
	urdf/env12.dae

	urdf/env1.xml
	urdf/env1.dae

	urdf/ground.xml
	urdf/ground.dae
	urdf/ground_phy_50mm.dae

	urdf/kuka.xml


	urdf/kuka_simple.xml

	urdf/sphere.xml

	urdf/rx90.xml
	urdf/rx90.dae

	urdf/icub.xml
	urdf/icub.dae
	urdf/icub_simple.xml
	urdf/icub_simple.dae
	urdf/icub_simple_collision.dae
	urdf/icub_simple_compensated_viscous.xml
	urdf/icub_simple_identified_viscous.xml

  urdf/romeo.xml
	
	urdf/cube.dae

  urdf/iCubGenova03_compensatedViscousFriction.xml
  urdf/iCubGenova03_identifiedViscousFriction.xml
  urdf/iCubGenova03_noViscousFriction.xml

  urdf/icub_chest.dae
  urdf/icub_head.dae
  urdf/icub_l_ankle_1.dae
  urdf/icub_lap_belt_1.dae
  urdf/icub_l_arm.dae
  urdf/icub_l_foot.dae
  urdf/icub_l_forearm.dae
  urdf/icub_l_hand.dae
  urdf/icub_l_hip_1.dae
  urdf/icub_l_hip_2.dae
  urdf/icub_l_shank.dae
  urdf/icub_l_shoulder_1.dae
  urdf/icub_l_shoulder_2.dae
  urdf/icub_l_thigh.dae
  urdf/icub_neck_1.dae
  urdf/icub_neck_2.dae
  urdf/icub_r_ankle_1.dae
  urdf/icub_r_arm.dae
  urdf/icub_r_foot.dae
  urdf/icub_r_forearm.dae
  urdf/icub_r_hand.dae
  urdf/icub_r_hip_1.dae
  urdf/icub_r_hip_2.dae
  urdf/icub_root_link.dae
  urdf/icub_r_shank.dae
  urdf/icub_r_shoulder_1.dae
  urdf/icub_r_shoulder_2.dae
  urdf/icub_r_thigh.dae
  urdf/icub_simple_collision_chest.dae
  urdf/icub_simple_collision.dae
  urdf/icub_simple_collision_head.dae
  urdf/icub_simple_collision_l_ankle_1.dae
  urdf/icub_simple_collision_lap_belt_1.dae
  urdf/icub_simple_collision_l_arm.dae
  urdf/icub_simple_collision_l_foot.dae
  urdf/icub_simple_collision_l_forearm.dae
  urdf/icub_simple_collision_l_hand.dae
  urdf/icub_simple_collision_l_hip_1.dae
  urdf/icub_simple_collision_l_hip_2.dae
  urdf/icub_simple_collision_l_shank.dae
  urdf/icub_simple_collision_l_shoulder_1.dae
  urdf/icub_simple_collision_l_shoulder_2.dae
  urdf/icub_simple_collision_l_thigh.dae
  urdf/icub_simple_collision_neck_1.dae
  urdf/icub_simple_collision_neck_2.dae
  urdf/icub_simple_collision_r_ankle_1.dae
  urdf/icub_simple_collision_r_arm.dae
  urdf/icub_simple_collision_r_foot.dae
  urdf/icub_simple_collision_r_forearm.dae
  urdf/icub_simple_collision_r_hand.dae
  urdf/icub_simple_collision_r_hip_1.dae
  urdf/icub_simple_collision_r_hip_2.dae
  urdf/icub_simple_collision_root_link.dae
  urdf/icub_simple_collision_r_shank.dae
  urdf/icub_simple_collision_r_shoulder_1.dae
  urdf/icub_simple_collision_r_shoulder_2.dae
  urdf/icub_simple_collision_r_thigh.dae
)

SET(RESOURCES_LWR_COLLADA
	urdf/lwr/base.dae
	urdf/lwr/link1.dae
	urdf/lwr/link2.dae
	urdf/lwr/link3.dae
	urdf/lwr/link4.dae
	urdf/lwr/link5.dae
	urdf/lwr/link6.dae
	urdf/lwr/link7.dae
)

SET(RESOURCES_ROMEO
  urdf/romeo/original/HeadRoll.dae
  urdf/romeo/original/LAnkleRollBasic.dae
  urdf/romeo/original/LAnkleRoll.dae
  urdf/romeo/original/LElbowYaw.dae
  urdf/romeo/original/LHand.dae
  urdf/romeo/original/LHipPitch.dae
  urdf/romeo/original/LKneePitch.dae
  urdf/romeo/original/LShoulderYaw.dae
  urdf/romeo/original/LThumb.dae
  urdf/romeo/original/LToePitch.dae
  urdf/romeo/original/LWristPitch.dae
  urdf/romeo/original/LWristRoll.dae
  urdf/romeo/original/NeckPitch.dae
  urdf/romeo/original/Phalax.dae
  urdf/romeo/original/PhalaxEnd.dae
  urdf/romeo/original/RAnkleRollBasic.dae
  urdf/romeo/original/RAnkleRoll.dae
  urdf/romeo/original/RElbowYaw.dae
  urdf/romeo/original/RHand.dae
  urdf/romeo/original/RHipPitch.dae
  urdf/romeo/original/RKneePitch.dae
  urdf/romeo/original/RShoulderYaw.dae
  urdf/romeo/original/RThumb.dae
  urdf/romeo/original/RToePitch.dae
  urdf/romeo/original/RWristPitch.dae
  urdf/romeo/original/RWristRoll.dae
  urdf/romeo/original/Torso.dae
  urdf/romeo/original/Waist.dae
  urdf/romeo/original/WristYaw.dae
)
  
SET(RESOURCES_ROMEO_COLLISION
  urdf/romeo/collision/HeadRoll.dae
  urdf/romeo/collision/LAnkleRollBasic.dae
  urdf/romeo/collision/LAnkleRoll.dae
  urdf/romeo/collision/LElbowYaw.dae
  urdf/romeo/collision/LHipPitch.dae
  urdf/romeo/collision/LKneePitch.dae
  urdf/romeo/collision/LShoulderYaw.dae
  urdf/romeo/collision/LToePitch.dae
  urdf/romeo/collision/NeckPitch.dae
  urdf/romeo/collision/RAnkleRollBasic.dae
  urdf/romeo/collision/RAnkleRoll.dae
  urdf/romeo/collision/RElbowYaw.dae
  urdf/romeo/collision/RHipPitch.dae
  urdf/romeo/collision/RKneePitch.dae
  urdf/romeo/collision/RShoulderYaw.dae
  urdf/romeo/collision/RToePitch.dae
  urdf/romeo/collision/Torso.dae
  urdf/romeo/collision/Waist.dae
)
  

FOREACH(SOURCE ${RESOURCES_URDF})
	INSTALL(FILES ${SOURCE}
		DESTINATION ${XDE_RESOURCES_PATH}
		PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
ENDFOREACH(SOURCE ${RESOURCES_URDF})

FOREACH(SOURCE ${RESOURCES_LWR_COLLADA})
	INSTALL(FILES ${SOURCE}
		DESTINATION ${XDE_RESOURCES_PATH}/lwr
		PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
ENDFOREACH(SOURCE ${RESOURCES_LWR_COLLADA})

FOREACH(SOURCE ${RESOURCES_ROMEO})
	INSTALL(FILES ${SOURCE}
		DESTINATION ${XDE_RESOURCES_PATH}/romeo/original
		PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
ENDFOREACH(SOURCE ${RESOURCES_ROMEO})

FOREACH(SOURCE ${RESOURCES_ROMEO_COLLISION})
	INSTALL(FILES ${SOURCE}
		DESTINATION ${XDE_RESOURCES_PATH}/romeo/collision
		PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
ENDFOREACH(SOURCE ${RESOURCES_ROMEO_COLLISION})
